examples/errors/expected/1043-errors-lambda-raise-annotation-hint.stderr
error: lambda body raises; declare its return type explicitly with `-> (T, !)` or `-> (T, !Named)`
  --> examples/errors/1043-errors-lambda-raise-annotation-hint.sx:18:61
   |
18 |     print("{}\n", take(closure((x: i32) -> i32 { if x < 0 { raise error.Neg; } return x; }), -1));
   |                                                             ^^^^^^^^^^^^^^^^
